# serverness-shell

./: Cargo.toml  Containerfile  README.md  serverness.json
shell/: Cargo.toml
shell/resources/: default_config.nu
shell/src/: config.rs  context.rs  generated_nu.rs  main.rs  state.rs
shell/src/cmd/: help.rs  instance.rs  instance_create.rs  instance_list.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
