[package]
name = "serverness-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
ctrlc = "3.4.5"
futures.workspace = true
indoc = "2.0.5"
serverness = { workspace = true, features = ["nu"] }
nu-cli = { workspace = true, features = ["plugin"] }
nu-cmd-base = { workspace = true }
nu-cmd-extra = { workspace = true }
nu-cmd-lang = { workspace = true }
nu-cmd-plugin = { workspace = true }
nu-command = { workspace = true, features = ["plugin"] }
nu-engine = { workspace = true }
nu-explore = { workspace = true }
nu-parser = { workspace = true }
nu-path = { workspace = true }
nu-plugin = { workspace = true }
nu-plugin-engine = { workspace = true }
nu-protocol = { workspace = true }
nu-system = { workspace = true }
nu-utils = { workspace = true }
schemars = { workspace = true, features = ["chrono", "uuid"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
