[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap.workspace = true
indexmap = "2.8.0"
newline-converter.workspace = true
progenitor = { workspace = true, default-features = false }
regex.workspace = true
rustfmt-wrapper.workspace = true
serde.workspace = true
serde_json.workspace = true
